<resources>
    <string name="app_name">My_Calculator_App</string>
    <string name="_7">7</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="divide">/</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="multiply">*</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="substraction">-</string>
    <string name="zero">0</string>
    <string name="clear">CLR</string>
    <string name="addition">+</string>
    <string name="equal">=</string>
    <string name="dot">.</string>
</resources>